Fixed photos title on mobile

--- a/src/pages/Photos.css
+++ b/src/pages/Photos.css
@@ -137,6 +137,6 @@
   }
   
   .photos-title {
-    font-size: 2rem;
+    font-size: 4.5rem;
   }
 }
